--- a/.github/workflows/build-push-container.yml
+++ b/.github/workflows/build-push-container.yml
@@ -34,7 +34,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}-analysis
           labels: |
-            org.opencontainers.image.url=https://ctid.mitre-engenuity.org/
+            org.opencontainers.image.url=https://ctid.mitre.org/
 
       - name: Build and push Analysis Docker image
         uses: docker/build-push-action@v2
@@ -52,7 +52,7 @@ jobs:
           images: |
             ghcr.io/${{ github.repository }}-pipeline
           labels: |
-            org.opencontainers.image.url=https://ctid.mitre-engenuity.org/
+            org.opencontainers.image.url=https://ctid.mitre.org/
 
       - name: Build and push Pipeline Docker image
         uses: docker/build-push-action@v2
