--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
+package-mode = false
 name = "sightings-ecosystem"
 version = "1.0.0"
 description = ""
-authors = ["Center for Threat-Informed Defense <ctid@mitre-engenuity.org>"]
+authors = ["Center for Threat-Informed Defense <ctid@mitre.org>"]
 license = "Apache"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10, <3.11"
+python = "^3.13"
 
 [tool.poetry.group.analysis]
 optional = true
@@ -20,7 +21,7 @@ networkx = "2.5"
 pandas = "1.1.3"
 plotly = "4.14.3"
 psycopg2-binary = "2.8.6"
-scipy = "1.7.3"
+scipy = "^1.15.2"
 wait-for-it = "2.2.1"
 werkzeug = "2.0.0"
 
